# plearn

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
include/: call_graph.h  converter.h  cpu_op_impl.h  cpu_ops.h  cpu_types.h  executor.h  forward_prop.h  layers.h  meta_helpers.h  model.h  operation.h  persistence.h  tensor.h
include/backend/cpu/: cpu_backend.h  cpu_bw_grad.h  cpu_chain_grad.h  cpu_env.h  cpu_fp_grad.h  cpu_op_impl.h  cpu_ops.h  cpu_types.h
include/cmpl/: layers.h  meta_helpers.h  model.h  operation.h  tensor.h
include/data/: converter.h  persistence.h
include/environ/: bw_diff_env.h  bw_diff_page.h  diff_env.h  env_page.h  env_section.h  env_types.h  exec_env.h  executor.h  fp_diff_env.h
include/model/: exec_env_provider.h  layers.h  model.h  model_types.h
include/rep/: backward_prop.h  call_graph.h  call_graph_runner.h  diff_info.h  forward_prop.h  ops.h  rep_types.h
proto/: call_graph.proto
test/: basic_test.cpp  call_graph_test.cpp  call_graph_test_helper.h  cpu_ops_test.cpp  executor_test.cpp  forward_prop_test.cpp  layer_test.cpp  persistence_test.cpp
test/backend/cpu/: cpu_bw_grad_test.cpp  cpu_fp_chain_grad_test.cpp  cpu_integration_test.cpp  cpu_ops_test.cpp  executor_test.cpp
test/cmpl/: basic_test.cpp  layer_test.cpp
test/data/: persistence_test.cpp
test/environ/: backend_mocks.h  diff_env_test.cpp  exec_env_test.cpp  executor_test.cpp
test/model/: model_test.cpp
test/rep/: backward_prop_test.cpp  call_graph_test.cpp  call_graph_test_helper.h  diff_info_test.cpp  forward_prop_test.cpp
